--- a/src/views/base/layout.pug
+++ b/src/views/base/layout.pug
@@ -4,9 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         title title | WeTube
     body 
-        include ./partials/header
+        include partials/header
+        include partials/nav
         block content
-        include ./partials/footer
-        block script
+        block scripts
