uploads file process and flash message usage

--- a/src/views/watch/edit.pug
+++ b/src/views/watch/edit.pug
@@ -16,3 +16,4 @@ block content
         label(for="hashtag") Hashtags, seperated by comma
         input(type="text", placeholder="#more #than #three #hashtags", name="hashtag", id="hashtag", value=`${video.hashtag}`)
         input(type="submit", value="Save")
+    a(href="delete") Delete Video
