--- a/src/views/base/layout.pug
+++ b/src/views/base/layout.pug
@@ -8,6 +8,15 @@ html(lang="en")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         title title | WeTube
     body 
+        if messages.info
+            div.message.info
+                span= messages.info
+        if messages.error
+            div.message.error
+                span= messages.error
+        if messages.success
+            div.message.success
+                span= messages.success
         include partials/header
         include partials/nav
         block content
