--- a/src/views/channel/channel.pug
+++ b/src/views/channel/channel.pug
@@ -3,26 +3,27 @@ include ../base/mixins/video
 
 block content 
     div
-        img(src=`/${channel.avatarUrl}`, alt=`${channel.name}'s avatar`)
+        img(src=`/${showingChannel.avatarUrl}`, alt=`${showingChannel.name}'s avatar`)
         header
-            h1 #{channel.name}
-            small #{channel.subscribed} #{channel.subscribed < 2 ? "subscriber" : "suscribers"}
+            h1 #{showingChannel.name}
+            small #{showingChannel.subscribed} #{showingChannel.subscribed < 2 ? "subscriber" : "suscribers"}
         button(type="button") Subscribe
 
-    hr
-    a(href=`${channel._id}/edit`) Edit Channel &rarr; 
-    hr
+    if channel && channel._id.valueOf() === id
+        hr
+        a(href=`${showingChannel._id}/edit`) Edit Channel &rarr; 
+        hr
     ul
         li home
             br
-            if(channel.videos)
-                +video(channel.videos)
+            if(showingChannel.videos)
+                +video(showingChannel.videos)
             else
                 span Nothing found.
         
         li infomation
             br
-            if(channel.description)
-                p=channel.description
+            if(showingChannel.description)
+                p=showingChannel.description
             else
                 span No description
