--- a/src/views/channel/login.pug
+++ b/src/views/channel/login.pug
@@ -6,5 +6,6 @@ block content
         input(type="password", placeholder="Password", name="password")
         input(type="submit", value="Login")
 
+    a(href="/join/github") Login with Github 
     hr
     a(href="/join") Don't have an Account? &rarr; Join
