--- a/src/views/channel/login.pug
+++ b/src/views/channel/login.pug
@@ -6,6 +6,7 @@ block content
         input(type="password", placeholder="Password", name="password")
         input(type="submit", value="Login")
 
-    a(href="/join/github") Login with Github 
+    a(href="/socialLogin/github") Login with Github
+    a(href="/socialLogin/naver") Login with Naver
     hr
     a(href="/join") Don't have an Account? &rarr; Join
