--- a/src/views/base/layout.pug
+++ b/src/views/base/layout.pug
@@ -4,20 +4,22 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet" href="/assets/css/style.css")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         title title | WeTube
     body 
-        if messages.info
+        if messages && messages.info
             div.message.info
                 span= messages.info
-        if messages.error
+        if messages && messages.error
             div.message.error
                 span= messages.error
-        if messages.success
+        if messages && messages.success
             div.message.success
                 span= messages.success
         include partials/header
         include partials/nav
         block content
+        script(src="/assets/js/main.js")
         block scripts
