--- a/src/views/base/mixins/video.pug
+++ b/src/views/base/mixins/video.pug
@@ -11,3 +11,5 @@ mixin video(videos)
                     small #{video.meta.views} #{video.meta.views > 1 ? "views" : "view" } 
                     span ㆍ
                     small #{video.meta.createdAt}
+        else
+            h2 Sorry, nothing found
