before webpack setting

--- a/src/views/channel/changePassword.pug
+++ b/src/views/channel/changePassword.pug
@@ -1,11 +1,27 @@
 extends ../base/layout
 
 block content
-    form(method="POST")
-        label(for="old") Current Password
-        input(type="password" name="old", id="old")
-        label(for="new") New Password
-        input(type="password" name="new1", id="new")
-        label(for="old") New Password Confirmation
-        input(type="password" name="new2", id="new2")
-        input(type="submit", value="Change Password")
+    section.change-password-channel
+        header
+                h1
+                    span
+                        i.fab.fa-youtube
+                        strong Wetube
+                        sup KR
+                    strong change-password Form
+        div.change-password-container
+            form(method="POST").change-password-form
+                div.change-password-content
+                    div.old-password
+                        h2
+                            label(for="old") Current Password
+                        input(type="password" name="old", id="old").old-password-input
+                    div.new-password
+                        h2
+                            label(for="new") New Password
+                        input(type="password" name="new1", id="new").new-password-input
+                    div.new-password2
+                        h2
+                            label(for="old") New Password Confirmation
+                        input(type="password" name="new2", id="new2").new-password2-input
+                    input(type="submit", value="Change Password")
