--- a/src/views/channel/login.pug
+++ b/src/views/channel/login.pug
@@ -9,4 +9,6 @@ block content
     a(href="/socialLogin/github") Login with Github
     a(href="/socialLogin/naver") Login with Naver
     hr
-    a(href="/join") Don't have an Account? &rarr; Join
+    div
+        strong Don't have an Account? &rarr; 
+        a(href="/join") Join
