--- a/src/views/base/layout.pug
+++ b/src/views/base/layout.pug
@@ -4,10 +4,19 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet" href="/assets/css/style.css")
+        //- styles
+        link(rel="stylesheet" href="/statics/css/style.css")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         title title | WeTube
+        //- favicon
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/assets/favicon/site.webmanifest">
+        <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#4e4e4e">
+        <meta name="theme-color" content="#ffffff">
     body 
         if messages && messages.info
             div.message.info
@@ -21,5 +30,5 @@ html(lang="en")
         include partials/header
         include partials/nav
         block content
-        script(src="/assets/js/main.js")
+        script(src="/statics/js/main.js")
         block scripts
