--- a/src/views/channel/edit.pug
+++ b/src/views/channel/edit.pug
@@ -2,15 +2,38 @@ extends ../base/layout
 include ../base/mixins/avatar
 
 block content
-    form(method="post", enctype="multipart/form-data")
-        label(for="name") Channel's name  
-        input(type="text", placeholder="Channel name", name="name", id="name", value=`${channel.name}`)
-        img(src=`${channel.avatarUrl.startsWith("https") ? channel.avatarUrl : `/${channel.avatarUrl}`}`, alt=`${channel.name}의 avatar image`)
-        label(for="avatar") Change Avatar
-        input(type="file", name="avatar", accept="image/*" ,id="avatar") 
-        label(for="description") Description
-        textarea(placeholder="About your channel..." name="description", cols="30", rows="10", id="description")=channel.description
-        input(type="submit", value="Save")
-    hr
-    a(href="changepassword") Change Password &rarr;
-    a(href="deleteChannel") Delete Channel &rarr;
+    seciton.edit-channel
+        header
+            h1
+                span
+                    i.fab.fa-youtube
+                    strong Wetube
+                    sup KR
+                strong Edit Form
+        div.edit-container
+            form(method="post", enctype="multipart/form-data").edit-channel-form
+                div.edit-content
+                    div.edit-name
+                        h2
+                            label(for="name") Channel's name  
+                        input(type="text", placeholder="Channel name", name="name", id="name", value=`${channel.name}`).input-name
+                        span.name-msg
+                    div.edit-avatar
+                        h2
+                            label(for="avatar") Change Avatar
+                        input(type="file", name="avatar", accept="image/*" ,id="avatar").input-avatar
+                        img(src=`${channel.avatarUrl.startsWith("https") ? channel.avatarUrl : `/${channel.avatarUrl}`}`, alt=`${channel.name}의 avatar image`).avatar
+                    div.edit-description
+                        h2
+                            label(for="description") Description
+                        textarea(placeholder="About your channel..." name="description", cols="30", rows="10", id="description")=channel.description
+                    input(type="submit", value="Save")
+        hr
+        div.edit-change-password
+            a(href="changepassword") 
+                strong Change Password &rarr;
+        div.edit-delete-channel
+            a(href="deleteChannel") 
+                strong Delete Channel &rarr;
+block scripts
+    script(src="/statics/js/editChannel.js") 
