--- a/src/views/watch/watch.pug
+++ b/src/views/watch/watch.pug
@@ -14,17 +14,18 @@ block content
         ul
             li
                 button
-                    i.far.fa-thumbs-up
+                    i.ic-liked
+                    i.ic-liked-fill
                     strong #{video.meta.liked} 
                     //- i.fas.fa-thumbs-up 누르면
             li
                 button
-                    i.far.fa-thumbs-down
+                    i.ic-disliked
                     strong #{video.meta.disliked}
                     //- i.fas.fa-thumbs-down 누르면
             li
                 button 
-                    i.fas.fa-archive
+                    i.ic-save
                     strong  save
     section
         div
