--- a/src/views/base/layout.pug
+++ b/src/views/base/layout.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         //- styles
-        link(rel="stylesheet" href="/statics/css/style.css")
+        link(rel="stylesheet" href="/assets/statics/css/style.css")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         title title | WeTube
@@ -30,5 +30,5 @@ html(lang="en")
         include partials/header
         include partials/nav
         block content
-        script(src="/statics/js/main.js")
+        script(src="/assets/statics/js/main.js")
         block scripts
