--- a/src/views/base/partials/nav.pug
+++ b/src/views/base/partials/nav.pug
@@ -1,28 +1,30 @@
 nav
     div
         button
-            i.fas.fa-bars
+            i.ic-hamburger
         a(href="/")
-            i.fab.fa-youtube
-                strong Wetube
-                sup KR
+            img(src="/assets/icons/Youtube-Logo.svg", alt="Button to go home")
 
     ul
         li
             a(href="/") 
-                i.fas.fa-home
+                i.ic-home
+                i.ic-home-fill
                 span 홈
         li
             a(href="/feed/explore") 
-                i.fas.fa-compass
+                i.ic-explore
+                i.ic-explore-fill
                 span 탐색
         li
             a(href="/feed/subscriptions") 
-                i.fas.fa-tags
+                i.ic-subscriptions
+                i.ic-subscriptions-fill
                 span 구독
         li
             a(href="/feed/library")
-                i.fas.fa-photo-video
+                i.ic-library
+                i.ic-library-fill
                 span 보관함
 
     //- +subscription(구독 배열)
