--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1,6 +1,137 @@
 /*!*********************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/client/scss/style.scss ***!
   \*********************************************************************************************************************/
+@font-face {
+  font-family: "youtube";
+  src: url(../2e8d5af4eda41732cdeb.eot);
+  src: url(../2e8d5af4eda41732cdeb.eot#iefix) format("embedded-opentype"), url(../fbb1f9bc856ec4872e74.ttf) format("truetype"), url(../f0ae6f5fc61cf375bd6d.woff) format("woff"), url(../ee51e56c024a58c18c6d.svg#youtube) format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+i {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "youtube" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.ic-disliked:before {
+  content: "\e91e";
+  color: #fff;
+}
+
+.ic-arrow-bottom:before {
+  content: "\e900";
+  color: #fff;
+}
+
+.ic-arrow-top:before {
+  content: "\e901";
+  color: #fff;
+}
+
+.ic-create:before {
+  content: "\e902";
+  color: #fff;
+}
+
+.ic-explore:before {
+  content: "\e903";
+  color: #fff;
+}
+
+.ic-explore-fill:before {
+  content: "\e904";
+  color: #fff;
+}
+
+.ic-hamburger:before {
+  content: "\e905";
+  color: #fff;
+}
+
+.ic-home:before {
+  content: "\e906";
+  color: #fff;
+}
+
+.ic-home-fill:before {
+  content: "\e907";
+  color: #fff;
+}
+
+.ic-left-bottom:before {
+  content: "\e908";
+  color: #fff;
+}
+
+.ic-library:before {
+  content: "\e909";
+  color: #fff;
+}
+
+.ic-library-fill:before {
+  content: "\e90a";
+  color: #fff;
+}
+
+.ic-liked:before {
+  content: "\e90b";
+  color: #fff;
+}
+
+.ic-liked-fill:before {
+  content: "\e90c";
+  color: #fff;
+}
+
+.ic-play:before {
+  content: "\e90d";
+  color: #fff;
+}
+
+.ic-premium:before {
+  content: "\e90e";
+  color: #fff;
+}
+
+.ic-premium-fill:before {
+  content: "\e90f";
+  color: #fff;
+}
+
+.ic-save:before {
+  content: "\e910";
+  color: #fff;
+}
+
+.ic-search:before {
+  content: "\e911";
+  color: #fff;
+}
+
+.ic-subscriptions:before {
+  content: "\e912";
+  color: #fff;
+}
+
+.ic-subscriptions-fill:before {
+  content: "\e913";
+  color: #fff;
+}
+
+.ic-your-videos:before {
+  content: "\e914";
+  color: #fff;
+}
+
 body {
   background-color: green;
 }
