♻️ path change edit join

--- a/src/views/channel/edit.pug
+++ b/src/views/channel/edit.pug
@@ -5,7 +5,7 @@ block content
     seciton.edit-channel
         header
             h1
-                strong Edit Form
+                strong Edit Channel Form
         div.edit-container
             form(method="post", enctype="multipart/form-data").edit-channel-form
                 div.edit-content
@@ -32,4 +32,4 @@ block content
             a(href="deleteChannel") 
                 strong Delete Channel &rarr;
 block scripts
-    script(src="/assets/statics/js/editChannel.js") 
+    script(src="/assets/statics/js/channel_edit.js") 
