--- a/src/views/channel/join.pug
+++ b/src/views/channel/join.pug
@@ -42,4 +42,4 @@ block content
         strong Already have an Account? &rarr; 
         a(href="/login") Login
 block scripts
-    script(src="/assets/statics/js/join.js") 
+    script(src="/assets/statics/js/channel_join.js") 
