--- a/src/views/watch/edit.pug
+++ b/src/views/watch/edit.pug
@@ -1,19 +1,35 @@
 extends ../base/layout
 
 block content
-    video(src=`/${channel.tempReupload
-                    ? channel.tempReupload
-                    : video.videoUrl}`, controls)
-    a(href="reupload") Re-upload Video file
-    form(method="POST", enctype="multipart/form-data")
-        img(src=`/${video.thumbUrl}`, alt=`${video.title}'s thumbnail`)
-        label(for="thumbnail") Thumbnail File
-        input(type="file", name="thumbnail", accept="image/*", id="thumbnail")
-        label(for="title") Title
-        input(type="text", placeholder="Video Title", name="title", id="title", value=`${video.title}` )
-        label(for="description") Description 
-        input(type="text", placeholder="About your video...", name="description", id="description", value=`${video.description}`)
-        label(for="hashtag") Hashtags, seperated by comma
-        input(type="text", placeholder="#more #than #three #hashtags", name="hashtag", id="hashtag", value=`${video.hashtag}`)
-        input(type="submit", value="Save")
-    a(href="delete") Delete Video
+    section.edit-video
+        header
+            h1
+                strong Edit Video Form
+        div.edit-container
+            video(src=`/${channel.tempReupload
+                            ? channel.tempReupload
+                            : video.videoUrl}`, controls)
+            a(href="reupload") Re-upload Video file
+            form(method="POST", enctype="multipart/form-data").edit-video-form
+                div.edit-content
+                    div.edit-thumbnail
+                        img(src=`/${video.thumbUrl}`, alt=`${video.title}'s thumbnail`).img-thumbnail
+                        h2
+                            label(for="thumbnail") Thumbnail File
+                        input(type="file", name="thumbnail", accept="image/*", id="thumbnail").input-thumbnail
+                    div.edit-title    
+                        h2
+                            label(for="title") Title
+                        input(type="text", placeholder="Video Title", name="title", id="title", value=`${video.title}` )
+                    div.edit-description    
+                        h2
+                            label(for="description") Description 
+                        input(type="text", placeholder="About your video...", name="description", id="description", value=`${video.description}`)
+                    div.edit-hashtag    
+                        h2
+                            label(for="hashtag") Hashtags, seperated by comma
+                        input(type="text", placeholder="#more #than #three #hashtags", name="hashtag", id="hashtag", value=`${video.hashtag}`)
+                    input(type="submit", value="Save").edit-btn
+            a(href="delete") Delete Video
+block scripts
+    script(src="/assets/statics/js/watch_edit.js") 
