✨ change password : showing error msg to user

--- a/src/views/channel/changePassword.pug
+++ b/src/views/channel/changePassword.pug
@@ -4,20 +4,26 @@ block content
     section.change-password-channel
         header
             h1
-                strong change-password Form
+                strong change-password
         div.change-password-container
             form(method="POST").change-password-form
                 div.change-password-content
                     div.old-password
-                        h2
+                        h3
                             label(for="old") Current Password
                         input(type="password" name="old", id="old").old-password-input
+                        span.old-password-msg.msg.invalid
                     div.new-password
-                        h2
+                        h3
                             label(for="new") New Password
                         input(type="password" name="new1", id="new").new-password-input
+                        span.new-password-msg.msg.invalid
                     div.new-password2
-                        h2
+                        h3
                             label(for="old") New Password Confirmation
                         input(type="password" name="new2", id="new2").new-password2-input
-                    input(type="submit", value="Change Password")
+                        span.new-password2-msg.msg.invalid
+                    button(type="submit").submit 
+                        strong Change Password
+block scripts
+    script(src="/assets/statics/js/channel_changePassword.js") 
